--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,8 @@ Authors@R:
 Description: What the package does (one paragraph).
 License: AGPL (>= 3)
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
+Roxygen: list(markdown = TRUE, roclets = c("namespace", "rd", "roxytest::testthat_roclet"))
 RoxygenNote: 7.1.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
