Added utilities from herosurv

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: herotools
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Helper functions for the hero family of packages
+Version: 1.0.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Jordan", "Amdahl", , "jamdahl@pai2.com", role = c("aut", "cre"))
+Maintainer: Jordan Amdahl <jamdahl@pai2.com>
+Description: Provides a set utility functions for use by herosurv, heromod, and other related packages.
 License: AGPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE, roclets = c("namespace", "rd", "roxytest::testthat_roclet"))
